--- a/Sparse_blind_deconvolution/README.ipynb
+++ b/Sparse_blind_deconvolution/README.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "where we assume that $y_t = 0$ for $t \\leq 0$. Typically we have $k \\ll T$.\n",
     "\n",
-    "As a convex surrogate for sparsity of $x$, we minimize its $l1$-norm, $\\|x\\|_1$. To preclude the trivial solution $w = 0$, we normalize $w$ by imposing the constraint $w_1 = 1$.\n",
+    "As a convex surrogate for sparsity of $x$, we minimize its $l_1$-norm, $\\|x\\|_1$. To preclude the trivial solution $w = 0$, we normalize $w$ by imposing the constraint $w_1 = 1$.\n",
     "\n",
     "**Interpretations.** (These are not needed to solve the problem.) In signal processing dialect, we can say that $w$ is a filter which, when applied to the signal $y$, results in $x$, a simpler, sparse signal. As a second interpretation, we can say that $y = w^{(-1)} * x$, where $w^{(-1)}$ is the convolution inverse of $w$, defined as\n",
     "\n",
@@ -36,7 +36,7 @@
     "\n",
     "其中我们假设 $y_t = 0$ 对于 $t \\leq 0$。通常情况下我们有 $k \\ll T$。\n",
     "\n",
-    "作为 $x$ 的稀疏性的凸替代，我们最小化其 $l1$-范数，$\\|x\\|_1$。为了避免平凡解 $w = 0$，我们通过施加约束 $w_1 = 1$ 来规范化 $w$。\n",
+    "作为 $x$ 的稀疏性的凸替代，我们最小化其 $l_1$-范数，$\\|x\\|_1$。为了避免平凡解 $w = 0$，我们通过施加约束 $w_1 = 1$ 来规范化 $w$。\n",
     "\n",
     "**解释**（这些不是解决问题所必需的。）在信号处理术语中，我们可以说 $w$ 是一个滤波器，当应用于信号 $y$ 时，产生了 $x$，一个更简单、稀疏的信号。作为第二种解释，我们可以说 $y = w^{(-1)} * x$，其中 $w^{(-1)}$ 是 $w$ 的卷积逆，定义为\n",
     "\n",
