--- a/Bandlimited_signal_recovery_from_zero-crossings/README.ipynb
+++ b/Bandlimited_signal_recovery_from_zero-crossings/README.ipynb
@@ -27,23 +27,52 @@
    "id": "feabdc68",
    "metadata": {},
    "source": [
-    "**稀疏盲反卷积** 我们得到一个时间序列观测值 $y \\in \\mathbb{R}^T$，并寻找一个滤波器（卷积核）$w \\in \\mathbb{R}^k$，使得卷积 $x = w * y \\in \\mathbb{R}^{(T + k - 1)}$ 在截断首尾 $k - 1$ 项后变得稀疏，即 $x_{k:T} = (x_k, x_{k+1}, ..., x_T)$ 是稀疏的。这里 $*$ 表示卷积，\n",
+    "**从零交叉恢复带限信号。** 设 $y \\in \\mathbb{R}^n$ 表示一个带限信号，这意味着它可以表示为一个频带内正弦波的线性组合：\n",
     "\n",
-    "$$ x_i = \\sum_{j=1}^{k} w_j y_{i-j}, \\quad i = 1,...,T + k - 1 $$\n",
+    "$$\n",
+    "y_t = \\sum_{j=1}^{B} a_j \\cos \\left( \\frac{2\\pi}{n} (f_{\\text{min}} + j - 1)t \\right) + b_j \\sin \\left( \\frac{2\\pi}{n} (f_{\\text{min}} + j - 1)t \\right), \\quad t=1,\\ldots,n,\n",
+    "$$\n",
     "\n",
-    "其中我们假设 $y_t = 0$ 对于 $t \\leq 0$。通常情况下我们有 $k \\ll T$。\n",
+    "其中 $f_{\\text{min}}$ 是频带中的最低频率，$B$ 是带宽，$a, b \\in \\mathbb{R}^B$ 分别是余弦和正弦系数。我们被给定了 $f_{\\text{min}}$ 和 $B$，但没有给出系数 $a, b$ 或信号 $y$。\n",
     "\n",
-    "作为 $x$ 的稀疏性的凸替代，我们最小化其 $l_1$-范数，$\\|x\\|_1$。为了避免平凡解 $w = 0$，我们通过施加约束 $w_1 = 1$ 来规范化 $w$。\n",
+    "我们不知道 $y$，但我们得到了它的符号 $s = \\text{sign}(y)$，其中 $s_t = 1$ 如果 $y_t \\geq 0$ 并且 $s_t = -1$ 如果 $y_t < 0$。（直到整体符号的改变，这和知道信号的'零交叉'是一样的，即，当它改变符号时。因此这个问题的名称。）\n",
     "\n",
-    "**解释**（这些不是解决问题所必需的。）在信号处理术语中，我们可以说 $w$ 是一个滤波器，当应用于信号 $y$ 时，产生了 $x$，一个更简单、稀疏的信号。作为第二种解释，我们可以说 $y = w^{(-1)} * x$，其中 $w^{(-1)}$ 是 $w$ 的卷积逆，定义为\n",
+    "我们寻求一个与带限假设和给定符号一致的 $y$ 的估计 $\\hat{y}$。当然，我们不能区分 $y$ 和 $\\alpha y$，其中 $\\alpha > 0$，因为这两个信号有相同的符号模式。因此，我们只能估计 $y$ 直到一个正的比例因子。为了规范化 $\\hat{y}$，我们将要求 $\\|\\hat{y}\\|_1 = n$，即 $|y_i|$ 的平均值是一。在所有与带限假设、给定符号和规范化一致的 $\\hat{y}$ 中，我们选择最小化 $\\|\\hat{y}\\|_2$ 的一个。\n",
     "\n",
-    "$$ w^{(-1)} = F^{(-1)}(1/F(w)), $$\n",
+    "(a) 展示如何使用凸优化或准凸优化找到 $\\hat{y}$。\n",
     "\n",
-    "其中 $F$ 是长度为 $N = T + k$ 的离散傅里叶变换，$F^{(-1)}$ 是其逆变换。在这种解释中，我们可以说我们已经将信号分解成了稀疏信号 $x$ 和具有短（长度为k）逆的信号 $w^{(-1)}$ 的卷积。\n",
+    "(b) 将您的方法应用于 `zero_crossings_data.*` 中的数据问题实例。数据文件还包括真实信号 $y$（当然您不能使用它来找到 $\\hat{y}$）。绘制 $\\hat{y}$ 和 $y$，并报告相对恢复误差，$\\|\\hat{y} - y\\|_2 / \\|y\\|_2$。简短评注恢复的质量。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "044f0da9",
+   "metadata": {},
+   "source": [
+    "(a) 我们可以将我们的估计表示为 $\\hat{y} = Ax$，其中 $x = (a, b) \\in \\mathbb{R}^{2B}$ 是余弦和正弦系数的向量，并且我们定义矩阵\n",
+    "$$\n",
+    "A = [C \\quad S] \\in \\mathbb{R}^{n \\times 2B},\n",
+    "$$\n",
+    "其中 $C, S \\in \\mathbb{R}^{n \\times B}$ 的元素分别为\n",
+    "$$\n",
+    "C_{tj} = \\cos\\left(\\frac{2\\pi(f_{\\text{min}} + j - 1)t}{n}\\right), \\quad S_{tj} = \\sin\\left(\\frac{2\\pi(f_{\\text{min}} + j - 1)t}{n}\\right),\n",
+    "$$\n",
     "\n",
-    "在 `blind_deconv_data.*` 中给出的信号上执行盲反卷积。此文件还定义了核长 $k$。绘制最优 $w$ 和 $x$，以及给定的观测 $y$。还要绘制逆核 $w^{(-1)}$，使用我们在 `blind_deconv_data.*` 中提供的 `inverse_ker` 函数。\n",
+    "为了确保 $\\hat{y}$ 的符号与 $s$ 一致，我们需要约束 $s_ta_t^T x \\geq 0$ 对于 $t = 1,\\ldots,n$，其中 $a_1^T ,\\ldots,a_n^T$ 是 A 的行。为了达到适当的规范化，我们还需要线性等式约束 $\\|\\hat{y}\\|_1 = s^TAx = n$。（注意，一般来说 $l_1$-范数等式约束不是凸的，但在这里是凸的，因为给定了符号。）\n",
     "\n",
-    "**提示**：函数 `conv(w, y)` 已被重载以适用于 CVX*。\n"
+    "我们有一个凸目标和线性不等式以及等式约束，所以我们的优化问题是凸的：\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& \\text{min} & & \\|Ax\\|_2 \\\\\n",
+    "& \\text{s.t.} & & s_ta_t^T x \\geq 0, & \\quad t = 1,\\ldots,n \\\\\n",
+    "& & & s^TAx = n.\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "我们得到我们的估计为 $\\hat{y} = Ax^*$，其中 $x^*$ 是这个问题的解。\n",
+    "\n",
+    "一个常见的错误是在没有规范化约束的情况下制定上述问题。错误的论点是你会解决这个问题，它是齐次的，然后你会缩放所得到的结果使其 $l_1$ 范数为一。这是行不通的，因为齐次问题的（唯一）解是 $x = 0$（因为 $x = 0$ 是可行的）。然而，这种方法确实给出了比 $x = 0$ 远好的数值结果。原因是解算器返回了一个非常小的 $x$，对于该 $x$，$Ax$ 有正确的符号。并且不，这并不意味着误差不是一个糟糕的。"
    ]
   }
  ],
