--- a/Sparse_blind_deconvolution/Report of Sparse blind deconvolution.ipynb
+++ b/Sparse_blind_deconvolution/Report of Sparse blind deconvolution.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b4bd561b",
+   "metadata": {},
+   "source": [
+    "# Report of Sparse blind deconvolution\n",
+    "\n",
+    "**吴天宇 12334125**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "37cf2db5",
    "metadata": {},
    "source": [
+    "## **0.1题目**\n",
     "\n",
     "**Sparse blind deconvolution.** We are given a time series observation $y \\in \\mathbb{R}^T$, and seek a filter (convolution kernel) $w \\in \\mathbb{R}^k$, so that the convolution $x = w * y \\in \\mathbb{R}^{(T + k - 1)}$ is sparse after truncating the first and last $k - 1$ entries, i.e., $x_{k:T} = (x_k, x_{k+1}, ..., x_T)$ is sparse. Here $*$ denotes convolution,\n",
     "\n",
@@ -30,6 +41,8 @@
    "id": "feabdc68",
    "metadata": {},
    "source": [
+    "## **0.2题目翻译**\n",
+    "\n",
     "**稀疏盲反卷积** 我们得到一个时间序列观测值 $y \\in \\mathbb{R}^T$，并寻找一个滤波器（卷积核）$w \\in \\mathbb{R}^k$，使得卷积 $x = w * y \\in \\mathbb{R}^{(T + k - 1)}$ 在截断首尾 $k - 1$ 项后变得稀疏，即 $x_{k:T} = (x_k, x_{k+1}, ..., x_T)$ 是稀疏的。这里 $*$ 表示卷积，\n",
     "\n",
     "$$ x_i = \\sum_{j=1}^{k} w_j y_{i-j}, \\quad i = 1,...,T + k - 1 $$\n",
