--- a/Sparse_blind_deconvolution/Report of Sparse blind deconvolution.ipynb
+++ b/Sparse_blind_deconvolution/Report of Sparse blind deconvolution.ipynb
@@ -61,6 +61,29 @@
     "\n",
     "**提示**：函数 `conv(w, y)` 已被重载以适用于 CVX*。\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1d2e350",
+   "metadata": {},
+   "source": [
+    "## **1.1解答**\n",
+    "\n",
+    "给定一个观测时间序列 $y \\in \\mathbb{R}^T$，目标是找到一个滤波器 $w \\in \\mathbb{R}^k$，使得卷积 $x = w * y$ 在截断首尾 $k - 1$ 个元素后变得稀疏，可以表述为如下优化问题：\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& \\text{min}\n",
+    "& & \\|x\\|_1 \\\\\n",
+    "& \\text{s.t.}\n",
+    "& & x = w * y, \\\\\n",
+    "& & & w_1 = 1, \\\\\n",
+    "& & & w \\in \\mathbb{R}^k, x \\in \\mathbb{R}^{(T + k - 1)}.\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "这里的 $\\|x\\|_1$ 表示 $x$ 的 $l_1$-范数，即 $x$ 各元素绝对值之和。目标是最小化 $x$ 的 $l_1$-范数，而 $x$ 由 $w$ 和 $y$ 通过卷积操作得到。此外，有一个约束条件 $w_1 = 1$ 以确保 $w$ 不是零向量。因为目标函数和所有的约束都是凸的，故该优化问题为凸优化问题。\n"
+   ]
   }
  ],
  "metadata": {
