--- a/Bandlimited_signal_recovery_from_zero-crossings/Report of Bandlimited signal recovery from zero-crossings.ipynb
+++ b/Bandlimited_signal_recovery_from_zero-crossings/Report of Bandlimited signal recovery from zero-crossings.ipynb
@@ -207,7 +207,7 @@
     "    if plot_type == 'plot':\n",
     "        ax1.plot(y1_data, color='tab:blue', label=legend1)\n",
     "    elif plot_type == 'stem':\n",
-    "        ax1.stem(y1_data, linefmt='tab:blue', markerfmt='bo', label=legend1)\n",
+    "        ax1.stem(y1_data, linefmt='tab:blue', label=legend1)\n",
     "\n",
     "    ax1.set_xlabel(xlabel)\n",
     "    ax1.set_ylabel(ylabel)\n",
@@ -246,7 +246,8 @@
     "    else:\n",
     "        y1_data = [y1_data] if np.isscalar(y1_data) else y1_data\n",
     "        combined_data = pd.DataFrame({legend1: y1_data})\n",
-    "    combined_data.to_csv(os.path.join(output_folder_path, csv_file_name), index=False, header=True)\n"
+    "    combined_data.to_csv(os.path.join(output_folder_path, csv_file_name), index=False, header=True)\n",
+    "    "
    ]
   },
   {
@@ -284,8 +285,8 @@
     "\n",
     "# 输出结果\n",
     "# 绘制原始信号y和估计信号y_recovered的图像\n",
-    "plot_and_save_with_csv(y, 'original and recovered bandlimited signals', 'Sample Index', 'bandlimited signals', results_output_folder_path, fig_size=(24, 5), y2_data=y_recovered, y2_label='bandlimited signals', legend1='original', legend2='recovered')\n",
-    "plot_and_save_with_csv(RRMS, 'RRMS Error', 'Iteration', 'Error', error_output_folder_path, fig_size=(24, 5))\n"
+    "plot_and_save_with_csv(y, 'original and recovered bandlimited signals', 'Sample Index', 'bandlimited signals', results_output_folder_path, y2_data=y_recovered, y2_label='bandlimited signals', legend1='original', legend2='recovered')\n",
+    "plot_and_save_with_csv(RRMS, 'RRMS Error', 'Iteration', 'Error', error_output_folder_path, legend1='RRMS')\n"
    ]
   },
   {
