--- a/Sparse_blind_deconvolution/Report of Sparse blind deconvolution.ipynb
+++ b/Sparse_blind_deconvolution/Report of Sparse blind deconvolution.ipynb
@@ -82,7 +82,17 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "这里的 $\\|x\\|_1$ 表示 $x$ 的 $l_1$-范数，即 $x$ 各元素绝对值之和。目标是最小化 $x$ 的 $l_1$-范数，而 $x$ 由 $w$ 和 $y$ 通过卷积操作得到。此外，有一个约束条件 $w_1 = 1$ 以确保 $w$ 不是零向量。因为目标函数和所有的约束都是凸的，故该优化问题为凸优化问题。\n"
+    "这里的 $\\|x\\|_1$ 表示 $x$ 的 $l_1$-范数，即 $x$ 各元素绝对值之和。目标是最小化 $x$ 的 $l_1$-范数，而 $x$ 由 $w$ 和 $y$ 通过卷积操作得到。此外，有一个约束条件 $w_1 = 1$ 以确保 $w$ 不是零向量。因为目标函数和所有的约束都是凸的，故该优化问题为凸优化问题。\n",
+    "\n",
+    "使用 python 调用 cvxpy 库求解该优化问题，恢复误差（RRMS）为[0.0008676301267520908](outputs/errors/RRMS_Error.csv)。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa0c7e1a",
+   "metadata": {},
+   "source": [
+    "[blind_deconv_data.py](module/blind_deconv_data.py)"
    ]
   }
  ],
