--- a/Sparse_blind_deconvolution/Report of Sparse blind deconvolution.ipynb
+++ b/Sparse_blind_deconvolution/Report of Sparse blind deconvolution.ipynb
@@ -365,9 +365,9 @@
    "id": "c5ff8481",
    "metadata": {},
    "source": [
-    "[`Inverse Kernel w^-1.jpg`](outputs/results/Inverse_Kernel_w^_1.jpg) 和 [`Inverse Kernel w^-1.csv`](outputs/results/Inverse_Kernel_w^_1.csv) 为滤波器 $w$ 的逆核 $w^{-1}$ 。\n",
+    "[`Inverse_Kernel_w^_1.jpg`](outputs/results/Inverse_Kernel_w^_1.jpg) 和 [`Inverse_Kernel_w^_1.csv`](outputs/results/Inverse_Kernel_w^_1.csv) 为滤波器 $w$ 的逆核 $w^{-1}$ 。\n",
     "\n",
-    "![`Inverse Kernel w^-1.jpg`](outputs/results/Inverse_Kernel_w^_1.jpg)"
+    "![`Inverse_Kernel_w^_1.jpg`](outputs/results/Inverse_Kernel_w^_1.jpg)"
    ]
   }
  ],
